update payment options
